--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,16 @@
-/* 1.0 JP fonts */
+/* 1.0 Initial Setup*/
+
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .njp {
   font-family: "Noto Serif JP", serif;
@@ -6,7 +18,6 @@
   font-weight: 400;
   font-style: normal;
 }
-
 
 .njps {
   font-family: "Noto Sans JP", sans-serif;
@@ -40,3 +51,32 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+ 
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/**************************************************/
