--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,8 @@ body, html {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:  "Zen Maru Gothic", serif;
+  color:#C55D0C
 }
 
 
