--- a/styles/index.css
+++ b/styles/index.css
@@ -82,11 +82,10 @@ body, html {
 
 /**************************************************/
 
-/* 1.0 Template */
+/* 2.0 Template */
 
 .top-container {
   background-color: #f1f1f1;
-  padding: 30px;
   text-align: center;
 }
 
@@ -94,6 +93,7 @@ body, html {
   padding: 10px 16px;
   background: #555;
   color: #f1f1f1;
+  
 }
 
 .content {
@@ -160,4 +160,9 @@ body, html {
     display: block;
     text-align: left;
   }
+}
+
+.responsive {
+  width: 100%;
+  height: auto;
 }
