--- a/styles/index.css
+++ b/styles/index.css
@@ -173,12 +173,121 @@ body, html {
 .responsive {
   width: 100%;
   height: auto;
-  border-radius: 25px;
 }
 
+/* 3.0 content*/
 
 .video-mask{
   width: 100%;
   border-radius: 25px; 
   overflow: hidden; 
+}
+
+.heading {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+  border-radius: 25px; 
+  margin-left: 30%; 
+  margin-right: 30%;
+
+}
+
+
+/* 4.0 slide show */
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+max-width: 1000px;
+position: relative;
+margin: auto;
+
+}
+
+/* Next & previous buttons */
+.prev, .next {
+background-color: #717171;
+opacity: 0.7;
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+padding: 16px;
+margin-top: -22px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
+}
+
+/* Position the "next button" to the right */
+.prev {
+left: 0;
+border-radius: 0px 25px 25px 0px;
+}
+
+.next {
+right: 0;
+border-radius: 25px 0 0 25px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+color: white;
+font-size: 15px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
+background-color: #717171;
+border-radius: 0 0 15px 15px;
+opacity: 0.7;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+color: white;
+background-color: #717171;
+border-radius: 25px;
+opacity: 0.7;
+font-size: 12px;
+padding: 8px 12px;
+position: absolute;
+top: 15px;
+left: 15px;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@keyframes fade {
+from {opacity: .4} 
+to {opacity: 1}
 }
