--- a/styles/index.css
+++ b/styles/index.css
@@ -81,6 +81,13 @@ body, html {
   to {opacity: 1}
 }
 
+.npnav {
+  text-decoration:none; 
+  color:#C55D0C;
+  font-size: large; 
+  font-weight: bold;
+}
+
 /**************************************************/
 
 /* 2.0 Template */
@@ -146,7 +153,7 @@ body, html {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:nth-child(-n+4)) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
