--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@ body, html {
   margin: 0;
   font-family:  "Zen Maru Gothic", serif;
   color:#C55D0C;
+  text-shadow: 5px 5px 10px rgb(190, 164, 164);
 }
 
 
@@ -203,7 +204,7 @@ body, html {
 
 /* 3.0 slide show */
 .mySlides {display: none}
-img {vertical-align: middle;}
+img {vertical-align: middle;box-shadow: 5px 5px 10px rgb(190, 164, 164);}
 
 /* Slideshow container */
 .slideshow-container {
