--- a/styles/index.css
+++ b/styles/index.css
@@ -200,6 +200,7 @@ body, html {
 
 .video-mask{
   width: 100%;
+  box-shadow: 5px 5px 10px rgb(190, 164, 164);
   border-radius: 25px; 
   overflow: hidden; 
 }
